# SIH-MCA-eConsultation-Solution

./: frontend.py  main.py  pyproject.toml  visualizations.py
Frontend/: index.html  package.json
Frontend/src/pages/ai-chatbot/components/: MessageInput.jsx
Frontend/src/pages/analysis-report/components/: ExportActions.jsx  OverallSummaryCard.jsx  SentimentPieChart.jsx
Frontend/src/pages/document-upload/components/: FileFormatGuide.jsx  FilePreviewCard.jsx  ToastNotification.jsx
Frontend/src/styles/: tailwind.css
frontend/: package-lock.json  tailwind.config.js
frontend/public/: manifest.json
frontend/src/: Routes.jsx
frontend/src/components/ui/: ExportMenu.jsx  FileStatusIndicator.jsx  Header.jsx  ThemeToggle.jsx
frontend/src/pages/ai-chatbot/: index.jsx
frontend/src/pages/ai-chatbot/components/: ChatMessage.jsx  FileUploadModal.jsx
frontend/src/pages/analysis-report/components/: AnalysisDataTable.jsx  ExportActions.jsx  OverallSummaryCard.jsx  SentimentPieChart.jsx  WordCloudCard.jsx
frontend/src/pages/document-upload/: index.jsx
frontend/src/pages/document-upload/components/: ActionButtons.jsx  FileFormatGuide.jsx  FileUploadZone.jsx  UploadProgress.jsx
src/components/ui/: ChatContextPanel.jsx  Header.jsx
src/pages/ai-chatbot/: index.jsx
src/pages/ai-chatbot/components/: ChatArea.jsx  ChatHeader.jsx  DocumentKnowledgePanel.jsx
src/pages/analysis-report/: index.jsx
src/pages/analysis-report/components/: AnalysisDataTable.jsx  LoadingState.jsx  WordCloudCard.jsx
src/pages/document-upload/: index.jsx
