[project]
name = "mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.7",
    "streamlit>=1.49.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "wordcloud>=1.9.4",
]
